// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`examples "groups-with-root" example should generate files 1`] = `
[
  "../../../close.svg",
  "../../../favourite.svg",
  "../../../align-left.svg",
  "../../../tag.svg",
  "common.svg",
  "format.svg",
  "sprite-info.ts",
]
`;

exports[`examples "groups-with-root" example should replay same output 1`] = `[]`;

exports[`examples "groups-without-root" example should generate files 1`] = `
[
  "../../../close.svg",
  "../../../favourite.svg",
  "../../../align-left.svg",
  "../../../tag.svg",
  "../../../common.svg",
  "../../../format.svg",
  "sprite-info.ts",
]
`;

exports[`examples "groups-without-root" example should replay same output 1`] = `[]`;

exports[`examples "react" example should generate files 1`] = `
[
  "../../../close.svg",
  "../../../favourite.svg",
  "../../../align-left.svg",
  "../../../tag.svg",
  "/Users/primary/WebstormProjects/neodx/libs/svg/examples/react/example.tsx",
  "common.svg",
  "format.svg",
  "sprite-info.ts",
  "/Users/primary/WebstormProjects/neodx/libs/svg/examples/react/icon.tsx",
]
`;

exports[`examples "react" example should replay same output 1`] = `[]`;

exports[`examples "simple" example should generate files 1`] = `
[
  "arrow-drop-down.svg",
  "arrow-drop-up.svg",
  "sprite-info.ts",
  "sprite.svg",
]
`;

exports[`examples "simple" example should replay same output 1`] = `[]`;
